PermissionManager: Переписання роботи Permissions API на MemberDataManager і GuildDataManager